// TripSplit — PostgreSQL schema

Enum trip_status {
  active
  finished
}

Enum expense_type {
  food
  transport
  accommodation
  entertainment
  other
}

Table users {
  id          uuid        [pk, default: `gen_random_uuid()`]
  name        varchar(100) [not null]
  email       varchar(255) [not null, unique]
  google_id   varchar(255) [not null, unique, note: 'идентификатор входа; сейчас всегда "local:{email}" (email-вход без пароля), поле зарезервировано под будущий Google OAuth']

  Indexes {
    google_id
    email
  }
}

Table trips {
  id           uuid          [pk, default: `gen_random_uuid()`]
  name         varchar(200)  [not null]
  status       trip_status   [not null, default: 'active']
  currency     char(3)       [not null, default: 'RUB', note: 'ISO 4217']
  created_at   timestamptz   [not null, default: `now()`]
  updated_at   timestamptz   [not null, default: `now()`]
  deleted_at   timestamptz   [note: 'soft delete']
}

Table trip_participants {
  trip_id   uuid [not null, ref: > trips.id]
  user_id   uuid [not null, ref: > users.id]
  joined_at timestamptz [not null, default: `now()`]

  Indexes {
    (trip_id, user_id) [pk]
    user_id
  }
}

Table receipts {
  id         uuid         [pk, default: `gen_random_uuid()`]
  trip_id    uuid         [not null, ref: > trips.id]
  name       varchar(200) [not null]
  date       date         [not null]
}

Table receipt_images {
  id                  uuid         [pk, default: `gen_random_uuid()`]
  receipt_id          uuid         [not null, unique, ref: > receipts.id, note: 'один чек — одно изображение']
  storage_key         varchar(500) [not null, note: 'ключ объекта в S3-совместимом хранилище (MinIO/AWS S3)']
  content_type        varchar(100) [not null]
  file_size_bytes     bigint       [not null]
  original_file_name  varchar(255) [not null]
  uploaded_at         timestamptz  [not null, default: `now()`]
}

Table expenses {
  id          uuid          [pk, default: `gen_random_uuid()`]
  trip_id     uuid          [not null, ref: > trips.id]
  receipt_id  uuid          [ref: > receipts.id, note: 'null, если траты без чека']
  payer_id    uuid          [not null, ref: > users.id, note: 'кто оплатил']
  name        varchar(200)  [not null]
  type        expense_type  [not null, default: 'other']
  value       decimal(12,2) [not null, note: 'цена до скидки']
  discount    decimal(12,2) [not null, default: 0]
  created_at  timestamptz   [not null, default: `now()`]
  updated_at  timestamptz   [not null, default: `now()`]
  deleted_at  timestamptz   [note: 'soft delete — позволяет undo']

  Indexes {
    trip_id
    payer_id
    receipt_id
  }
}

Table expense_consumers {
  expense_id uuid [not null, ref: > expenses.id]
  user_id    uuid [not null, ref: > users.id, note: 'на кого потрачено']

  Indexes {
    (expense_id, user_id) [pk]
    user_id
  }
}